--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,9 @@
 :root {
   --primary-white: #fff;
   --primary-orange: #f9ab00;
-  --primary-dark: rgba(255,255,255, 0);
+  --primary-dark: rgba(255, 255, 255, 0);
+  --primary-red: #ef4035;
+  --primary-hover-red: #f33501;
 }
 
 body {
@@ -11,6 +13,10 @@ body {
 }
 
 /* ----------------NavBar------------------ */
+nav {
+  z-index: 2;
+}
+
 .logo {
   width: 6.25rem;
 }
@@ -26,10 +32,10 @@ nav ul li {
 }
 
 .navbar-nav > li > a {
-  margin-right: .75rem;
-  margin-left: .75rem;
+  margin-right: 0.75rem;
+  margin-left: 0.75rem;
   color: var(--primary-white) !important;
-  border-bottom: .1875rem solid var(--primary-dark);
+  border-bottom: 0.1875rem solid var(--primary-dark);
 }
 
 .navbar-brand {
@@ -38,10 +44,87 @@ nav ul li {
   height: 6rem !important;
 }
 
-.navbar-nav > li > a.active, .navbar-nav > li > a.active:focus {
-  border-bottom: .1875rem solid var(--primary-orange);
+.navbar-nav > li > a.active,
+.navbar-nav > li > a.active:focus {
+  border-bottom: 0.1875rem solid var(--primary-orange);
 }
 
 .navbar-nav > li > a:hover {
-  border-bottom: .1875rem solid var(--primary-orange);
+  border-bottom: 0.1875rem solid var(--primary-orange);
+}
+
+/* -------------Header Style ---------- */
+.header-wraper {
+  position: relative;
+  background: url(./header-background-image.jpeg) no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 90vh;
+}
+
+.main-info {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: "Roboto Condesed", sans-serif;
+  z-index: 1;
+  text-align: center;
+}
+
+.main-info h1 {
+  text-transform: uppercase;
+}
+
+@media only screen and (max-width: 768px) {
+  .main-info h1 {
+    font-size: 1.5rem !important;
+  }
+  .typed-text {
+    font-size: 1.7rem;
+  }
+
+  .navbar-brand {
+    width: 7rem;
+  }
+}
+
+/* -------------TYPED TEXT ---------- */
+.typed-text {
+  font-size: 1.5rem;
+}
+/* -------------HEADER MAIN OFFER BUTTON ---------- */
+.btn-main-offer {
+  border: 1px solid var(--primary-red);
+  text-transform: uppercase;
+  border-radius: 0;
+  padding: 0.625rem 0.75rem 0.75rem 0.75rem;
+  color: #000;
+  margin: 2rem;
+  transition: 0.3s;
+}
+
+.btn-main-offer:hover {
+  text-decoration: none;
+  background-color: var(--primary-hover-red);
+  color: #000;
+}
+
+/* -----------------PARTICLES JS ------------- */
+.tsparticles-canvas-el {
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+  z-index: 1;
+}
+
+@media only screen and (max-width: 768px) {
+  .particles-canvas {
+    display: none;
+  }
 }
